kubernetes_ingress-main/common/ingress-rules2-routes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-2
spec:
  ingressClassName: nginx
  rules:
  - host: vilasjadhav.in
    http:
      paths:
      - pathType: Prefix
        path: "/java-web-app"
        backend:
         service:
          name: javawebappsvc
          port: 
           number: 80
      - pathType: Prefix
        path: "/maven-web-app"
        backend:
         service:
          name: mavenwebappsvc
          port: 
           number: 80
      - pathType: Prefix
        path: "/blue-web-app"
        backend:
         service:
          name: bluegreenliveservice
          port: 
           number: 80
      - pathType: Prefix
        path: "/green-web-app"
        backend:
         service:
          name: greenliveservice
          port: 
           number: 80
...
